# tts-remote

./: .gitignore  pyproject.toml  server.py
scripts/: baseline_qwen3_tts.py  benchmark_faster_qwen3_tts.py  benchmark_faster_qwen3_tts_n20.py  compare_vanilla_qwen_tts.py  diagnose_length_breakpoint.py  diagnose_runaway_generation.py  inspect_faster_qwen3_tts.py  inspect_qwen_tts.py  inspect_qwen_tts_compile.py  inspect_qwen_tts_cudagraph.py  inspect_vllm_qwen3_tts.py  install_flash_attn.sh  profile_qwen3_tts.py  setup_faster_qwen3_spike.sh  setup_vllm_spike.sh
